--- a/WebContent/user/offer/reg.html
+++ b/WebContent/user/offer/reg.html
@@ -5,73 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/reset.css" type="text/css" />
     <link rel="stylesheet" href="/css/user/offer/reg.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <script src="/js/user/offer/reg.js"></script>
-    <title>(개인)역제안 등록 페이지</title>
+    <title>TEUM | 틈을 채우기 위한 여행</title>
 </head>
 <body>
-    <header class="header pcHeader">
-        <div class="header_h1">
-            <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        </div>
-        <div>
-            <ul class="main_menu">
-                <li class="header_search">
-                    <input type="text" /><a href=""><i class="fas fa-search"></i></a>
-                </li>
-                <li><a href="">공지사항</a></li>
-                <li><a href="">이벤트</a></li>
-                <li><a href="">더보기</a></li>
-                <li class="mypage">
-                    <a href="">로그인</a>
-                    <div class="mega_menu">
-                        <ul>
-                            <li><a href="">submenu</a></li>
-                            <li><a href="">submenu</a></li>
-                            <li><a href="">submenu</a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
-        </div>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+            </div>
+            <div>
+                <ul class="main-menu">
+                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                    <li><a href="">제안하기</a></li>
+                    <li><a href="">예약내역</a></li>
+                    <li><a href="">더보기</a></li>
+                    <li class="mypage"><a href="">로그인</a>
+                        <div class="mega-menu">
+                            <ul>
+                                <li><a href="">내정보</a></li>
+                                <li><a href="">제안내역</a></li>
+                                <li><a href="">찜한 숙소</a></li>
+                                <li><a href="">로그아웃</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </header>
 
-    <header class="header mobileHeader">
-        <div>
-            <a href=""><i class="fas fa-bars"></i></a>
-        </div>
-        <div class="header_h1">
-            <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        </div>
-        <div>
-            <a href=""><i class="fas fa-search"></i></a>
-        </div>
-    </header>
-
-    <section>
+    <section class="container-sec">
         <div class="container">
             <main id="main" class="main">
-                <div class="breadcrumb">
+                <!-- <div class="breadcrumb">
                     <ul class="breadcrumb-list">
                         <li><i class="fas fa-home"></i>HOME ▶</li>
                         <li>역제안 등록</li>
                     </ul>
+                </div> -->
+                <!-- <div class="banner-img"></div> -->
+                <div class="ment-container">
+                    <div class="ment-title">Teum</div>
+                    <div class="ment-content">
+                        <div class="quote left-quote">
+                            <i class="fas fa-quote-left"></i>
+                        </div>
+                        <div class="quote right-quote">
+                            <i class="fas fa-quote-right"></i>
+                        </div>
+                        <div class="ment">지금까지 고정된 가격에 숙소를 예약하셨나요?</div>
+                        <div class="ment">숙박 시장에 새로운 <span>패러다임(Paradigm)</span>과 <span>혁신(Innovation)</span>으로</div>
+                        <div class="ment">틈을 이용하는 모든 고객들에게 새로운 가치를 제공합니다.</div>
+                    </div>
                 </div>
-                <h1>여러분의 휴식처를 원하는 가격으로 제시해 보세요!</h1>
-                <div class="banner-img"></div>
 
                 <section class="reg-form-sec">
                     <form action="" method="post" class="reg-form">
                         <div>
-                            <div class="form-both form-left">
+                            <div>
                                 <section>
-                                    <i class="far fa-calendar-alt"></i><span>날짜</span> 
-                                    <input type="date" name="start-date" class="start-date" required>
-                                    <input type="date" name="end-date" class="end-date" required>
+                                    <i class="far fa-calendar-alt"></i><span>&nbsp;&nbsp;날짜&nbsp;&nbsp;&nbsp;&nbsp;</span> 
+                                    <input type="date" name="start-date" class="form-option date start-date" required>
+                                    <input type="date" name="end-date" class="form-option date end-date" required>
                                 </section>
                                 <section>
-                                    <i class="fas fa-map-marker-alt"></i><span>지역</span>
-                                    <select class="main-city">
+                                    <i class="fas fa-map-marker-alt"></i><span>&nbsp;&nbsp;지역&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                    <select class="form-option main-city">
                                         <option name="seoul">서울</option>
                                         <!-- 야나두 참고함 -->
                                         <option name="busan">부산</option>
@@ -83,62 +86,60 @@
                                         <option name="jeonla">전라</option>
                                         <option name="chungcheong">충청</option>
                                     </select>
-                                    <select class="sub-city">
-                                        <option name="" selected>강남/역삼/삼성</option>
-                                        <option name="">신사/청담/압구정</option>
-                                        <option name="">서초/교대/사당</option>
-                                        <option name="">잠실/송파/강동</option>
-                                        <option name="">을지로/명동/중구</option>
-                                        <option name="">서울역/이태원/용산</option>
-                                        <option name="">종로/인사동</option>
-                                        <option name="">동대문구</option>
-                                        <option name="">홍대/합정/마포/서대문</option>
-                                        <option name="">여의도</option>
-                                        <option name="">영등포역</option>
-                                        <option name="">구로/신도림/금천</option>
-                                        <option name="">김포공항/염창/강서</option>
-                                        <option name="">건대입구/성수/왕십리</option>
-                                        <option name="">성북/강북/노원/도봉</option>
+                                    <select class="form-option sub-city">
+                                        <option name="sub-option" selected>강남/역삼/삼성</option>
+                                        <option name="sub-option">신사/청담/압구정</option>
+                                        <option name="sub-option">서초/교대/사당</option>
+                                        <option name="sub-option">잠실/송파/강동</option>
+                                        <option name="sub-option">을지로/명동/중구</option>
+                                        <option name="sub-option">서울역/이태원/용산</option>
+                                        <option name="sub-option">종로/인사동</option>
+                                        <option name="sub-option">동대문구</option>
+                                        <option name="sub-option">홍대/합정/마포/서대문</option>
+                                        <option name="sub-option">여의도</option>
+                                        <option name="sub-option">영등포역</option>
+                                        <option name="sub-option">구로/신도림/금천</option>
+                                        <option name="sub-option">김포공항/염창/강서</option>
+                                        <option name="sub-option">건대입구/성수/왕십리</option>
+                                        <option name="sub-option">성북/강북/노원/도봉</option>
                                     </select>
                                 </section>
                             </div>
-                            <div class="form-both form-right">
+                            <div>
                                 <section>
-                                    <i class="fas fa-user"></i><span>인원수</span>
-                                    <!-- <input type="button" value="성인 2, 아동 1" required> -->
-                                    <select>
-                                        <option value="">1</option>
-                                        <option value="" selected>2</option>
-                                        <option value="">3</option>
-                                        <option value="">4</option>
-                                        <option value="">5</option>
-                                        <option value="">6</option>
-                                        <option value="">7</option>
-                                        <option value="">8</option>
-                                        <option value="">9</option>
-                                        <option value="">10</option>
-                                        <option value="">11</option>
-                                        <option value="">12</option>
-                                        <option value="">13</option>
-                                        <option value="">14</option>
-                                        <option value="">15</option>
-                                        <option value="">16</option>
-                                        <option value="">17</option>
-                                        <option value="">18</option>
-                                        <option value="">19</option>
-                                        <option value="">20</option>
+                                    <i class="fas fa-user"></i><span>&nbsp;&nbsp;인원수&nbsp;</span>
+                                    <select class="form-option people-select">
+                                        <option value="" name="people">1</option>
+                                        <option value="" name="people" selected>2</option>
+                                        <option value="" name="people">3</option>
+                                        <option value="" name="people">4</option>
+                                        <option value="" name="people">5</option>
+                                        <option value="" name="people">6</option>
+                                        <option value="" name="people">7</option>
+                                        <option value="" name="people">8</option>
+                                        <option value="" name="people">9</option>
+                                        <option value="" name="people">10</option>
+                                        <option value="" name="people">11</option>
+                                        <option value="" name="people">12</option>
+                                        <option value="" name="people">13</option>
+                                        <option value="" name="people">14</option>
+                                        <option value="" name="people">15</option>
+                                        <option value="" name="people">16</option>
+                                        <option value="" name="people">17</option>
+                                        <option value="" name="people">18</option>
+                                        <option value="" name="people">19</option>
+                                        <option value="" name="people">20</option>
                                     </select>
                                 </section>
                                 <section>
-                                    <i class="fas fa-won-sign"></i><span>가격</span>
-                                    <!-- <input type="text" class="price" placeholder="원 단위로 입력해주세요" required /> -->
-                                    <input type="text" class="price" placeholder="원 단위로 입력해주세요" required>
+                                    <i class="fas fa-won-sign"></i><span>&nbsp;&nbsp;가격&nbsp;&nbsp;&nbsp;&nbsp;</span>
+                                    <input type="text" class="form-option price-input" placeholder="원 단위로 입력해주세요" required>
                                 </section>
                             </div>
                         </div>
                         <section class="submit-btn-sec">
-                            <input type="submit" class="submit-btn" value="등록" />
-                            <a href="">취소</a>
+                            <input type="submit" class="btn submit-btn" value="제안하기" />
+                            <a href="" class="btn cancel-btn">돌아가기</a>
                         </section>
                     </form>
                 </section>
