--- a/WebContent/admin/customerService/notice/list.html
+++ b/WebContent/admin/customerService/notice/list.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../css/reset.css" type="text/css">
+    <link rel="stylesheet" href="../../../css/admin/layout.css">
     <link rel="stylesheet" href="../../../css/admin/notice/list.css">
      <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
@@ -65,7 +66,13 @@
 	                        </ul>
 	                    </div>
 	                    <section class="list-board">
-	                        <h1>공지사항 리스트</h1>
+	                    	<div class="main-search">
+		                        <h1>공지사항 리스트</h1>
+		                        <form action="">
+		                        	<input type="text">
+		                        	<input type="submit" value="검색">
+		                        </form>
+	                        </div>
 	                        <table>
 	                            <thead>
 	                                <tr>
