--- a/WebContent/admin/customerService/notice/reg.html
+++ b/WebContent/admin/customerService/notice/reg.html
@@ -6,23 +6,25 @@
     <link rel="stylesheet" href="../../../css/reset.css" type="text/css">
     <link rel="stylesheet" href="../../../css/admin/layout.css">
     <link rel="stylesheet" href="../../../css/admin/notice/reg.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>noticeCreate</title>
 </head>
 <body>
-    <header class="sec_header">
-        <div class="header pcHeader">
-            <div class="header_h1">
-                <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+    <header class="sec-header">
+        <div id="header" class="header">
+            <div class="header-h1">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
             </div>
             <div>
-                <ul class="main_menu">
-                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
+                <ul class="main-menu">
+                    <li class="header-search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
                     <li><a href="">공지사항</a></li>
                     <li><a href="">이벤트</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                        <div class="mega_menu">
+                        <div class="mega-menu">
                             <ul>
                                 <li><a href="">submenu</a></li>
                                 <li><a href="">submenu</a></li>
@@ -69,27 +71,31 @@
 	                            <table class="table">
 	                                <tr>
 	                                    <th class="col-m">제목</th>
-	                                    <td class="col-l text-left">
-	                                        <input type="text" class="input-title" autofocus required>
-	                                        <input type="checkbox" class="checkbox-open"><span>즉시 공개</span>
+	                                    <td class="col-l text-left" colspan="3">
+	                                        <input type="text"  name="title"  class="input-title" autofocus required>
+	                                        <input type="checkbox" class="checkbox-open"  name="pub" ><span>즉시 공개</span>
 	                                    </td>
 	                                </tr>
 	                                <tr>
-	                                    <th>첨부파일</th>
+	                                    <th >첨부파일</th>
 	                                    <td class="text-left">
 	                                        <input type="file">
 	                                    </td>
+	                                    <th class="col-m">작성자</th>
+	                                    <td >
+	                                    <input type="hidden" name="writer_id" value="관리자">
+	                                     <span>관리자</span></td>
 	                                </tr>
-	                                <tr>
+	                               <tr>
 	                                    <th>내용</th>
-	                                    <td class="text-left">
-	                                        <textarea class="textarea" cols="75" rows="25"></textarea>
+	                                    <td class="text-left" colspan="3">
+	                                        <textarea class="textarea" cols="75" rows="25"  name="content"></textarea>
 	                                    </td>
 	                                </tr>
 	                            </table>
 	                            <div>
 	                                <input class="btn-submit" type="submit" value="등록" />
-	                                <button class="btn-cancel" href="">취소</button>
+	                                <button class="btn-cancel"  onclick="location.href='list' ">취소</button>
 	                            </div>
 	                        </form>
 	                    </section>
