--- a/WebContent/user/userInfo/updateInfo.html
+++ b/WebContent/user/userInfo/updateInfo.html
@@ -6,52 +6,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="../../css/jun.css">
+    <link rel="stylesheet" href="../../css/layout.css">
+    <link rel="stylesheet" href="../../css/user/userInfo/updateInfo.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 
 </head>
 
 <body>
-    <div class="sec_header">
-        <header class="header pcHeader">
-            <div class="header_h1">
-                <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+    <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
             </div>
             <div>
-                <ul class="main_menu">
+                <ul class="main-menu">
                     <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
-                    <li><a href="">공지사항</a></li>
-                    <li><a href="">이벤트</a></li>
+                    <li><a href="">제안하기</a></li>
+                    <li><a href="">예약내역</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                        <div class="mega_menu">
+                        <div class="mega-menu">
                             <ul>
-                                <li><a href="">submenu</a></li>
-                                <li><a href="">submenu</a></li>
-                                <li><a href="">submenu</a></li>
+                                <li><a href="">내정보</a></li>
+                                <li><a href="">제안내역</a></li>
+                                <li><a href="">찜한 숙소</a></li>
+                                <li><a href="">로그아웃</a></li>
                             </ul>
                         </div>
                     </li>
                 </ul>
             </div>
-        </header>
-    </div>
-
-    <header class="header mobileHeader">
-        <div>
-            <a href=""><i class="fas fa-bars"></i></a>
-        </div>
-        <div class="header_h1">
-            <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
-        </div>
-        <div>
-            <a href=""><i class="fas fa-search"></i></a>
-        </div>
+        </section>
     </header>
 
-    <section class="userInfo_main">
+    <section class="container-sec">
+        <div class="container">
+            <aside id="aside" class="aside">
+                <!-- <h1>게시판</h1> -->
+                <ul>
+                    <li class="active"><a href=""><i class="fas fa-exclamation-circle"></i>&nbsp;&nbsp;회원정보수정</a></li>
+                    <li><a href=""><i class="far fa-calendar-check"></i>&nbsp;&nbsp;예약관리</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;제안신청관리</a></li>
+                    <li><a href=""><i class="far fa-question-circle"></i>&nbsp;&nbsp;찜한상품조회</a></li>
+                </ul>
+            </aside>
+            <main id="main" class="main">
+                <div class="breadcrumb">
+                    <ul class="breadcrumb-list">
+                        <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i> </li>
+                        <li>&nbsp;&nbsp;&nbsp;마이페이지</li>
+                    </ul>
+                </div>
+                <section class="update-info-sec">
+                    <h1>회원정보수정</h1>
+                    <div>
+                        <form action="">
+                            <table style="width: 400px;">
+                                <tr>
+                                    <td style="width: 30%;">이메일</td>
+                                    <td colspan="2"><span>등록된 이메일정보</span></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>이름</td>
+                                    <td style="width: 50%;"><span>등록된 이름정보</span></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>닉네임</td>
+                                    <td colspan="2"><input type="text"></td>
+                                    <td><input type="button" value="중복확인"></td>
+                                </tr>
+                                <tr>
+                                    <td>비밀번호</td>
+                                    <td colspan="2"><input type="text"></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>비밀번호확인</td>
+                                    <td colspan="2"><input type="text"></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>연락처</td>
+                                    <td colspan="2"><input type="text"></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>회원구분</td>
+                                    <td colspan="3">
+                                        <div class="checkbox-container">
+                                            <input type="checkbox" id="checkbox-2" class="checkbox" required>
+                                            <label for="checkbox-2"><span></span></label>
+                                        </div>개인회원 
+                                        <input type="radio" name="memtype">기업회원
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="4"><input type="submit" value="수정하기"></td>
+                                </tr>
+                            </table>
+                        </form>
+                    </div>
+                </section>
+            </main>
+        </div>
+    </section>
+
+    <!-- <section class="userInfo_main">
         <main class="sec_userInfo_main">
-            <!-- <h1>회원정보수정</h1> -->
             <aside>
                 <h1>회원정보관리(개인)</h1>
                 <ul>
@@ -122,7 +188,7 @@
                 </section>
             </div>
         </main>
-    </section>
+    </section> -->
 
     <section class="sec_footer">
         <footer>
