--- a/WebContent/admin/customerService/notice/list.html
+++ b/WebContent/admin/customerService/notice/list.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -63,9 +62,9 @@
 	                <section class="sub-container">
 	                    <div class="breadcrumb">
 	                        <ul class="breadcrumb-list">
-	                            <li><i class="fas fa-home"></i>HOME ▶ </li>
-	                            <li>고객센터 ▶ </li>
-	                            <li>공지사항 리스트</li>
+	                            <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i> </li>
+                        		<li>&nbsp;&nbsp;&nbsp;고객센터&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+	                            <li>&nbsp;&nbsp;&nbsp;공지사항 리스트</li>
 	                        </ul>
 	                    </div>
 	                    <section class="list-board">
